Fix selector scrollbar

--- a/packages/browser-wallet/src/popup/pages/Web3ProofRequest/Web3ProofRequest.scss
+++ b/packages/browser-wallet/src/popup/pages/Web3ProofRequest/Web3ProofRequest.scss
@@ -178,7 +178,7 @@
         margin-top: 178px;
         margin-left: 32px;
         margin-right: 32px;
-        width: calc(100% - 64px);
+        width: calc(100% - 48px);
     }
 
     &__selector-item {
